# sexp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  asv.conf.json  flake.nix  justfile  pyproject.toml
.github/: copilot-instructions.md
benchmarks/: bench_SExpressionParser.py
data/: base64.lisp  canonical.lisp  comment.lisp  display_hints.lisp  hex.lisp  input1.lisp  input2.lisp  lists.lisp  quoted_string.lisp  random_sexp.lisp  sample.lisp  tokens.lisp  verbatim.lisp
docs/: SABNF.md  draft-rivest-sexp-09.txt  draft-rivest-sexp-10.html  draft-rivest-sexp-10.txt  draft-rivest-sexp-10.xml  interface.md  keep-a-changelog.1.1.0.md  rfc9804.html
docs/RFC9804/: rfc9804.html  rfc9804.txt  rfc9804.xml  sexp.abnf
sexp_native/: Cargo.toml
sexp_native/src/: lib.rs
src/s_expression/: __init__.py  parser.py  vote_simulation.py
src/se/: __init__.py  parser.py
src/sexp/: __init__.py  _backend.py  gen.py  interface.py  parser.py  printer.py  rfc9804.peg  settings.py  types.py
src/sexp_gen/: abnf.py
src/sexp_old/: __init__.py  interface.py  parser.py
tests/: random_generator.py  test_examples.py  test_init.py  test_parser.py  test_parser2.py  test_vote_simulation.py
tests/sexp/: test_gen.py  test_parser.py  test_sexp.py
tests/sexp_gen/: test_abnf.py
tests/unit/: random_generator.py  test_parser.py
tests/unit/sexp/: test_sexp.py
tests/unit/sexp_gen/: test_abnf.py
